@@ -71,38 +71,48 @@ typedef CPPFunction rl_completion_func_t;
  * @sa C_KEYWORDS
  */
 static c_lang_lit_t const AC_CDECL_KEYWORDS[] = {
-  { LANG_C_CPP_MIN(11,11),  L_ALIGN         },
-  { LANG_ANY,               L_APPLE_BLOCK   },
-  { LANG_ANY,               L_ARRAY         },
-  { LANG_C_MIN(11),         L_ATOMIC        },
-  { LANG_ANY,               L_BITS          },
-  { LANG_C_CPP_MIN(11,11),  L_BYTES         },
-  { LANG_ANY,               L_CAST          },
-  { LANG_C_MIN(99),         L_COMPLEX       },
-  { LANG_CPP_ANY,           L_CONSTRUCTOR   },
-  { LANG_CPP_ANY,           L_CONVERSION    },
-  { LANG_CPP_ANY,           L_DESTRUCTOR    },
-  { LANG_ANY,               L_FUNCTION      },
-  { LANG_C_MIN(99),         L_IMAGINARY     },
-  { LANG_C_MIN(99),         L_LENGTH        },
-  { LANG_CPP_ANY,           L_LINKAGE       },
-  { LANG_CPP_MIN(11),       L_LITERAL       },
-  { LANG_CPP_ANY,           L_MEMBER        },
-  { LANG_CPP_ANY,           H_NON_MEMBER    },
-  { LANG_ANY,               L_POINTER       },
-  { LANG_ANY,               L_PREDEFINED    },
-  { LANG_CPP_ANY,           L_PURE          },
-  { LANG_CPP_ANY,           L_REFERENCE     },
-  { LANG_ANY,               L_RETURNING     },
-  { LANG_CPP_MIN(11),       L_RVALUE        },
-  { LANG_CPP_ANY,           L_SCOPE         },
-  { LANG_CPP_ANY,           H_USER_DEFINED  },
-  { LANG_C_MIN(99),         L_VARIABLE      },
-  { LANG_ANY,               L_VARIADIC      },
-  { LANG_ANY,               L_VECTOR        },
-  { LANG_ANY,               L_WIDTH         },
+  { LANG_CPP_MIN(20),       L_ADDRESS         },
+  { LANG_C_CPP_MIN(11,11),  L_ALIGN           },
+  { LANG_ANY,               L_APPLE_BLOCK     },
+  { LANG_ANY,               L_ARRAY           },
+  { LANG_C_MIN(11),         L_ATOMIC          },
+  { LANG_ANY,               L_BITS            },
+  { LANG_C_CPP_MIN(11,11),  L_BYTES           },
+  { LANG_ANY,               L_CAST            },
+  { LANG_C_MIN(99),         L_COMPLEX         },
+  { LANG_CPP_ANY,           L_CONSTRUCTOR     },
+  { LANG_CPP_ANY,           L_CONVERSION      },
+  { LANG_CPP_MIN(11),       L_DEPENDENCY      },
+  { LANG_CPP_ANY,           L_DESTRUCTOR      },
+  { LANG_CPP_MIN(17),       L_DISCARD         },
+  { LANG_CPP_MIN(20),       L_EVALUATION      },
+  { LANG_CPP_MIN(11),       L_EXCEPT          },
+  { LANG_CPP_MIN(11),       L_EXPRESSION      },
+  { LANG_ANY,               L_FUNCTION        },
+  { LANG_C_MIN(99),         L_IMAGINARY       },
+  { LANG_CPP_MIN(20),       L_INITIALIZATION  },
+  { LANG_C_MIN(99),         L_LENGTH          },
+  { LANG_CPP_ANY,           L_LINKAGE         },
+  { LANG_CPP_MIN(11),       L_LITERAL         },
+  { LANG_C_CPP_MIN(11,11),  L_LOCAL           },
+  { LANG_CPP_ANY,           L_MEMBER          },
+  { LANG_CPP_ANY,           H_NON_MEMBER      },
+  { LANG_ANY,               L_POINTER         },
+  { LANG_ANY,               L_PREDEFINED      },
+  { LANG_CPP_ANY,           L_PURE            },
+  { LANG_CPP_ANY,           L_REFERENCE       },
+  { LANG_ANY,               L_RETURNING       },
+  { LANG_CPP_MIN(11),       L_RVALUE          },
+  { LANG_CPP_ANY,           L_SCOPE           },
+  { LANG_CPP_MIN(20),       L_UNIQUE          },
+  { LANG_C_CPP_MIN(2X,17),  L_UNUSED          },
+  { LANG_CPP_ANY,           H_USER_DEFINED    },
+  { LANG_C_MIN(99),         L_VARIABLE        },
+  { LANG_ANY,               L_VARIADIC        },
+  { LANG_ANY,               L_VECTOR          },
+  { LANG_ANY,               L_WIDTH           },
 
-  { LANG_NONE,              NULL            }
+  { LANG_NONE,              NULL              }
 };
 
 // local functions
