@@ -122,6 +122,7 @@
  * @sa C_KEYWORDS
  */
 static cdecl_keyword_t const CDECL_KEYWORDS[] = {
+  { L_ADDRESS,        TOKEN( Y_ADDRESS                    ) },
   { L_ALIGN,          TOKEN( Y_ALIGNED                    ) },
   { L_ALIGNED,        TOKEN( Y_ALIGNED                    ) },
   { L_ALL,            TOKEN( Y_ALL                        ) },
@@ -135,6 +136,7 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
                         { LANG_C_MIN(99), L__BOOL },
                         { LANG_ANY,       L_BOOL  } ) },
   { L_BYTES,          TOKEN( Y_BYTES                      ) },
+  { L_CARRIES,        TOKEN( Y_CARRIES                    ) },
   { H_CARRIES_DEPENDENCY,
                       C_SY1( false, L_CARRIES_DEPENDENCY  ) },
   { L_CAST,           TOKEN( Y_CAST                       ) },
@@ -159,7 +161,9 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
   { L_DEFAULTED,      C_SY1( false, L_DEFAULT             ) },
   { L_DEFINE,         TOKEN( Y_DEFINE                     ) },
   { L_DELETED,        C_SY1( false, L_DELETE              ) },
+  { L_DEPENDENCY,     TOKEN( Y_DEPENDENCY                 ) },
   { L_DESTRUCTOR,     TOKEN( Y_DESTRUCTOR                 ) },
+  { L_DISCARD,        TOKEN( Y_DISCARD                    ) },
   { H_DOUBLE_PRECISION,
                       C_SY1( false, L_DOUBLE              ) },
   { L_DTOR,           TOKEN( Y_DESTRUCTOR                 ) },
@@ -168,6 +172,7 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
   { L_ENUMERATION,    C_SY1( false, L_ENUM                ) },
   { L_EVAL,           TOKEN( Y_EVALUATION                 ) },
   { L_EVALUATION,     TOKEN( Y_EVALUATION                 ) },
+  { L_EXCEPT,         TOKEN( Y_EXCEPT                     ) },
   { L_EXIT,           TOKEN( Y_QUIT                       ) },
   { L_EXPLAIN,        TOKEN( Y_EXPLAIN                    ) },
   { L_EXPORTED,       C_SY1( false, L_EXPORT              ) },
@@ -189,9 +194,12 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
   { L_LENGTH,         TOKEN( Y_LENGTH                     ) },
   { L_LINKAGE,        TOKEN( Y_LINKAGE                    ) },
   { L_LITERAL,        TOKEN( Y_LITERAL                    ) },
+  { L_LOCAL,          TOKEN( Y_LOCAL                      ) },
+  { L_MAYBE,          TOKEN( Y_MAYBE                      ) },
   { H_MAYBE_UNUSED,   C_SY1( false, L_MAYBE_UNUSED        ) },
   { L_MBR,            TOKEN( Y_MEMBER                     ) },
   { L_MEMBER,         TOKEN( Y_MEMBER                     ) },
+  { L_NO,             TOKEN( Y_NO                         ) },
   { H_NO_DISCARD,     C_SY1( false, L_NODISCARD           ) },
   { H_NO_EXCEPT,      C_SY1( false, L_NOEXCEPT            ) },
   { H_NO_EXCEPTION,   C_SY1( false, L_NOEXCEPT            ) },
@@ -240,12 +248,15 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
   { L_THREAD_LOCAL,   C_SYN( true,
                         { LANG_C_MIN(11), L__THREAD_LOCAL },
                         { LANG_ANY,       L_THREAD_LOCAL  } ) },
+  { L_THREAD,         TOKEN( Y_THREAD                     ) },
   { H_THREAD_LOCAL,   C_SYN( true,
                         { LANG_C_CPP_MAX(99,03), L_GNU___THREAD  },
                         { LANG_C_MIN(11),        L__THREAD_LOCAL },
                         { LANG_ANY,              L_THREAD_LOCAL  } ) },
   { L_TO,             TOKEN( Y_TO                         ) },
   { L_TYPE,           C_SY1( false, L_TYPEDEF             ) },
+  { L_UNIQUE,         TOKEN( Y_UNIQUE                     ) },
+  { L_UNUSED,         TOKEN( Y_UNUSED                     ) },
   { L_USER,           TOKEN( Y_USER                       ) },
   { H_USER_DEF,       TOKEN( Y_USER_DEFINED               ) },
   { H_USER_DEFINED,   TOKEN( Y_USER_DEFINED               ) },
