@@ -1,3 +1,3 @@
 declare x as carries-dependency int
         ^
-9: error: "carries-dependency" can only appear on functions or function parameters
+9: error: "carries dependency" can only appear on functions or function parameters
