@@ -1,1 +1,1 @@
-declare x as deprecated maybe-unused int
+declare x as deprecated maybe unused int
