@@ -1,1 +1,1 @@
-declare f as maybe-unused function returning void
+declare f as maybe unused function returning void
