@@ -1,1 +1,1 @@
-declare x as maybe-unused int
+declare x as maybe unused int
