@@ -1,1 +1,1 @@
-declare s as maybe-unused structure S
+declare s as maybe unused structure S
