@@ -1,4 +1,4 @@
 explain [[using foo : maybe_unused]] int i
           ^
 11: warning: "using" in attributes not supported by cdecl (ignoring)
-declare i as maybe-unused int
+declare i as maybe unused int
