@@ -1,1 +1,1 @@
-declare f as function (x as carries-dependency int) returning int
+declare f as function (x as carries dependency int) returning int
