@@ -1,1 +1,1 @@
-declare f as function (x as maybe-unused int) returning void
+declare f as function (x as maybe unused int) returning void
